# atlas-stf

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
audit/contracts/: integrity_manifest.json  integrity_manifest.yaml
data/: README.md
data/benchmarks/: minister_flow.json
data/curated/: minister_bio.json
data/raw/: README.md
data/reference/: tpu_classes.json  tpu_movements.json  tpu_subjects.json  tpu_version.json
docs/: 00-visao-geral.md  01-objetivos-e-escopo.md  02-fontes-de-dados.md  03-modelo-de-dados.md  04-metodologia-analitica.md  05-definicao-de-casos-comparaveis.md  06-metricas-e-avaliacao.md  07-riscos-e-limitacoes.md  08-governanca-e-auditoria.md  09-roadmap.md  0a-estudos.md  10-glossario.md  ARCHITECTURE.md  benchmark-minister-flow.md  gold-set-protocol.md  representation_network_contract.md
docs/adr/: 000-template.md  001-sqlite-serving-database.md  002-independent-builders-jsonl.md  003-ssr-only-frontend.md  004-get-only-read-only-api.md  005-unified-fetch-manifest.md  006-graph-review-post-endpoint.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/estudos/: README.md
docs/pesquisas/: ministros.md
governance/: data-dictionary.md  decision-log-template.md  decision-log.md  risk-register.md  source-registry.md
governance/audit-checklists/: README.md  TEMPLATE.md  alertas.md  codigo-grupos-auditaveis.md  dados-ingestao.md  governanca.md  grupos-comparaveis.md  interface.md  metodologia.md  normalizacao.md  relatorios.md  revisao-humana.md
prompts/: README.md
prompts/analytics/: README.md  TEMPLATE.md
prompts/ingestion/: README.md  TEMPLATE.md
prompts/normalization/: README.md  TEMPLATE.md
prompts/reporting/: README.md  TEMPLATE.md
prompts/review/: README.md  TEMPLATE.md
prompts/system/: README.md  TEMPLATE.md  base-agent.md
research/: README.md
research/baselines/: README.md  TEMPLATE.md
research/hypotheses/: README.md  TEMPLATE.md
research/review-notes/: README.md  TEMPLATE.md
research/sampling/: README.md  TEMPLATE.md
schemas/: agenda_exposure.schema.json  agenda_exposure_summary.schema.json  alert_analysis.schema.json  amicus_network.schema.json  amicus_network_summary.schema.json  assignment_audit.schema.json  assignment_audit_summary.schema.json  baseline.schema.json  baseline_summary.schema.json  comparison_group.schema.json  comparison_group_summary.schema.json  compound_risk.schema.json  compound_risk_summary.schema.json  corporate_network.schema.json  corporate_network_summary.schema.json  counsel.schema.json  counsel_affinity.schema.json  counsel_affinity_summary.schema.json  counsel_network_cluster.schema.json  counsel_network_cluster_summary.schema.json  decision_event.schema.json  decision_event_group_link.schema.json  decision_velocity.schema.json  decision_velocity_summary.schema.json  donation_match.schema.json  donation_match_summary.schema.json  donor_corporate_link.schema.json  donor_corporate_link_summary.schema.json  economic_group.schema.json  economic_group_summary.schema.json  entity_identifier.schema.json  entity_identifier_reconciliation.schema.json  evidence_bundle.schema.json  external_event.schema.json  firm_cluster.schema.json  firm_cluster_summary.schema.json  law_firm_entity.schema.json  lawyer_entity.schema.json  match_calibration_review.schema.json  match_calibration_summary.schema.json  (+41 more)
scripts/: audit_api_smoke.py  audit_builder_runtime.py  audit_builder_validation.py  audit_canonical_sources.py  audit_end_to_end_sample.py  audit_fallback_usage.py  audit_field_propagation.py  audit_frontend_api_coverage.py  audit_golden_runtime.py  audit_integrity.py  audit_pipeline_contracts.py  benchmark_minister_flow.py  build_gold_set.py  build_golden_sample.py  build_tpu_tables.py  download_stf.py  export_openapi.py  probe_stf_portal.py  release.sh  run_pipeline.sh  score_evaluation.py  validate_pipeline_fixes.py
scripts/gold_set/: __init__.py  _analysis.py  _builder.py  _constants.py  _curatorial_decisions.py  _labeling.py  _schema.py  _summary.py
src/atlas_stf/: __init__.py  _audit_helpers.py  audit_gates.py  ingest_manifest.py  io_hash.py  profile.py  profile_models.py  raw_manifest.py  schema_validate.py  validate.py  validation_rules.py
tests/: _smoke_helpers.py  test_audit_builder_validation.py  test_audit_fixes.py  test_audit_gates.py  test_ci_workflow.py  test_io_hash.py  test_profile.py  test_raw_manifest.py  test_schema_validate.py  test_smoke_materiality.py  test_smoke_serving_cgu.py  test_smoke_validation.py  test_validate.py
tests/agenda/: test_client.py  test_parser.py  test_runner.py
tests/analytics/: _compound_risk_helpers.py  _donation_match_helpers.py  _donor_corporate_link_helpers.py  _sanction_match_helpers.py  _scl_helpers.py  conftest.py  test_agenda_exposure.py  test_amicus_network.py  test_assignment_audit.py  test_atomic_io.py  test_baseline.py  test_build_alerts.py  test_build_groups.py  test_compound_risk.py  test_compound_risk_core.py  test_compound_risk_enrichment.py  test_corporate_network.py  test_corporate_network_advanced.py  test_counsel_affinity.py  test_counsel_network.py  test_decision_velocity.py  test_donation_empirical.py  test_donation_match.py  test_donation_match_core.py  test_donation_match_enrichment.py  test_donation_match_events.py  test_donation_match_memory_safe.py  test_donation_match_temporal.py  test_donor_corporate_link.py  test_donor_corporate_link_aggregation.py  test_donor_corporate_link_paths.py  test_economic_group.py  test_group_rules.py  test_match_calibration.py  test_match_helpers.py  test_minister_flow.py  test_ml_outlier.py  test_origin_context.py  test_parallel.py  test_pauta_anomaly.py  (+22 more)
tests/api/: conftest.py  test_app.py  test_audit_regression.py  (+15 more)
ui-spec/: dashboard-spec.md  evidence-panel-spec.md  filters-spec.md  information-architecture.md
web/: eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json
(+548 files in other folders)
