[project]
name = "atlas-stf"
version = "1.0.8"
description = "Análise empírica e documentação metodológica sobre padrões decisórios do STF"
readme = "README.md"
requires-python = ">=3.14.3"
license = {text = "PolyForm-Noncommercial-1.0.0"}
authors = [
    {name = "Atlas STF contributors"},
]
keywords = ["stf", "supremo-tribunal-federal", "analytics", "jurisprudência", "dados-abertos"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Legal Industry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "rich>=14.3.3",
    "uvicorn>=0.41.0",
    "joblib>=1.5.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "threadpoolctl>=3.6.0",
    "defusedxml>=0.7.1",
]

[project.scripts]
atlas-stf = "atlas_stf:main"
atlas-stf-staging = "atlas_stf.staging._runner:main"
atlas-stf-scraper = "atlas_stf.scraper._runner:main"

[project.urls]
Homepage = "https://atlasstf.com.br"
Repository = "https://github.com/vittoroliveira-dev/atlas-stf"
Documentation = "https://github.com/vittoroliveira-dev/atlas-stf/tree/main/docs"
Changelog = "https://github.com/vittoroliveira-dev/atlas-stf/blob/main/CHANGELOG.md"
Issues = "https://github.com/vittoroliveira-dev/atlas-stf/issues"

[project.optional-dependencies]
ml = ["scikit-learn>=1.6"]
proxy = ["socksio>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_stf"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pyright>=1.1",
    "ruff>=0.11",
    "vulture>=2.14",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -n auto: pytest-xdist distribui testes por todos os cores
# -W ignore: Python 3.14 emite DeprecationWarning quando xdist faz fork()
#   porque o runtime já possui threads internas (GC).  Não é nosso código e
#   o xdist funciona sem problemas com fork no Linux.
#   Ref: https://github.com/pytest-dev/pytest-xdist/issues/1074
addopts = "-n 4 -m 'not slow'"
filterwarnings = [
    "ignore:This process .* is multi-threaded, use of fork:DeprecationWarning",
]
markers = ["slow: marks tests as slow (run with pytest -m slow)"]

[tool.coverage.run]
source = ["atlas_stf"]

[tool.coverage.report]
fail_under = 83
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
